[package]
name = "rask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "unicode", "wrap_help"] }
glob = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"

[profile.dev]
opt-level = 0

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1